improved lists globally

--- a/analysis_summary.html
+++ b/analysis_summary.html
@@ -126,17 +126,19 @@
 
                 <p>The main goal was to improve the readability of the page so that the users would get a quicker and better understanding of the information presented to them.</p>
 
-                <p>I broke this down into a list of small improvements:
-                    <ul class="article_list">
-                        <li>A better separation of the sections by using solid color headers instead of the fading gradient and a drop shadow effect</li>
-                        <li>Less intrusive and better placed expand/collapse icons</li>
-                        <li>Added some indent to the content of each section to enforce the information hierarchy</li>
-                        <li>Dimmed the black horizontal separators so that they don’t break the  visual hierarchy</li>
-                        <li>improved export buttons</li>
-                        <li>improved name and display of overlap column</li>
-                        <li>improved display of the p-values and p-value ranges</li>
-                    </ul>
-                </p>
+                <span>I broke this down into a list of small improvements:</span>
+                <ul class="article_list">
+                    <li>A better separation of the sections by using solid color headers instead of the fading gradient
+                        and a drop shadow effect
+                    </li>
+                    <li>Less intrusive and better placed expand/collapse icons</li>
+                    <li>Added some indent to the content of each section to enforce the information hierarchy</li>
+                    <li>Dimmed the black horizontal separators so that they don’t break the visual hierarchy</li>
+                    <li>improved export buttons</li>
+                    <li>improved name and display of overlap column</li>
+                    <li>improved display of the p-values and p-value ranges</li>
+                </ul>
+
 
                 <div class="gallery">
                     <a class="fancybox" rel="analysis_summary" title="After the design refresh, the page has a sleeker look and allows easier understanding of the information." href="img/analysis_summary/after.png"><img class="gallery1" id="after" src="img/analysis_summary/after.png" alt="" /></a>
