--- a/curation.html
+++ b/curation.html
@@ -144,7 +144,7 @@
 					reading an article, and filled the forms in the application afterwards, because this meant less
 					context switches and it was less tiring.</p>
 
-				<p>The most important things I learned from the interviews were that:
+				<span>The most important things I learned from the interviews were that:</span>
 
 				<ul class="article_list">
 					<li>the purpose of the tool is fast data entry, the users want to spend as less time as possible
@@ -155,7 +155,7 @@
 						correct
 					</li>
 				</ul>
-				</p>
+
 
 				<p>The context of use was also interesting. Most curators were hired as contractors and mainly worked
 					from home, on their own schedule, and were paid based on how much work they get done in a month. Some of
