--- a/isoprofiler.html
+++ b/isoprofiler.html
@@ -135,7 +135,7 @@
 				three participants who offered a lot of good feedback that allowed me to identify the main pain points
 					and some interesting new opportunities.</p>
 
-				<p>The main takaways were:
+				<span>The main takaways were:</span>
 
 				<ul class="article_list">
 					<li>focus needs to be on the isoform expression data instead of the little literature evidence
@@ -143,7 +143,7 @@
 					<li>the large volumes of data are hard to digest and a drill down approach is preferable</li>
 					<li>there are very specific data patterns of interest</li>
 				</ul>
-				</p>
+
 
 				<h2>VISUAL ISOFORM REPRESENTATION</h2>
 
