--- a/multi_color_overlay.html
+++ b/multi_color_overlay.html
@@ -120,7 +120,7 @@
 					The goal was to find interesting connections between genes, pathways and activation, phosphorylation,
 					putting it all together in this uber visualization, and to tell a visual story to explain the hypothesis.</p>
 
-				<p>The workflow followed three separate steps:</p>
+				<span>The workflow followed three separate steps:</span>
 				<ul class="article_list">
 					<li>analyze large amounts of data</li>
 					<li>emphasize interesting findings in a visual way</li>
