--- a/pvalue.html
+++ b/pvalue.html
@@ -114,14 +114,13 @@
                     <a class="fancybox" rel="problem" title="The original display of the information" href="img/pvalue_chart/before.png"><img class="gallery1center" id="before1" src="img/pvalue_chart/before.png" alt="" /></a>
                 </div>
 
-                <p>The goals were to:
+                <span>The goals were to:</span>
                 <ul class="article_list">
                     <li>give some meaning to the numbers</li>
                     <li>make them easy to compare</li>
                     <li>accommodate individual values as well as ranges of values</li>
                     <li>display it into a widget 100 px wide so it can be used in tables and lists</li>
                 </ul>
-                </p>
 
                 <h2>FINDING THE MENTAL MODEL</h2>
 
