--- a/quesee.html
+++ b/quesee.html
@@ -141,7 +141,7 @@
 				<p>For those of you not familiar with test automation, you can read a short description bellow.</p>
 
                 <span id="moreOrLessAutomation">
-				<p>The needs of such a testing tool gravitate along these lines :
+                    <span>The needs of such a testing tool gravitate along these lines:</span>
 					<ul class="article_list">
                         <li>Record communication</li>
                         <li>Replay and compare baseline vs actual results</li>
@@ -151,9 +151,9 @@
                         <li>Investigate the failures</li>
                         <li>Fix tests that are providing a wrong assessment</li>
                     </ul>
-                    </p>
 
-                    <p>There are some notions that need to be defined before going further : </p>
+
+                    <span>There are some notions that need to be defined before going further:</span>
 					<table class="definitions">
                         <tr>
                             <td class="key">API</td>
