--- a/test_history.html
+++ b/test_history.html
@@ -117,16 +117,16 @@
                 <span id="moreOrLessAutomation">
 				<p>Test automation is about having a bunch of tests, that are ran by a computer, following a predefined schedule.
 				The goal is to validate that the system is behaving as expected.</p>
-					<p>A test is a script that takes in some input, acts on it, than validates the outcome. There are three possible results :
+					<span>A test is a script that takes in some input, acts on it, than validates the outcome. There are three possible results:</span>
 					<ul class="article_list">
 						<li>the system behaves as expected and we say that the test <b>passes</b></li>
 						<li>the system does not behave as expected and we say that the test <b>fails</b>></li>
 						<li>the system breaks down during the test, the expected behavior cannot be verified, and we say the test <b>skips</b>, or throws an exception.</li>
 					</ul>
-				</p>
 
-				<p>After running a suite of tests, usually a report is generated, and if there are failures or exceptions, they are further investigated and fixed.
-					In a scenario like this, where the test results are a reflection of the health of the system, there are some questions that need to be answered by the test automation software:
+
+					<span>After running a suite of tests, usually a report is generated, and if there are failures or exceptions, they are further investigated and fixed.</br>
+					In a scenario like this, where the test results are a reflection of the health of the system, there are some questions that need to be answered by the test automation software:</span>
 					<ul class="article_list">
 						<li>when was the test created?</li>
 						<li>what is the expected behavior of the system?</li>
@@ -143,7 +143,6 @@
 						<li>what is the health status of the test during a specific time span?</li>
 						<li>how many times did it pass, fail or skipp?</li>
 					</ul>
-				</p>
 				</span>
 				
 
