--- a/parking_plus.html
+++ b/parking_plus.html
@@ -130,14 +130,14 @@
 				<p>A lot of competitors were pointing to parking lots on a map, some of them were showing street parking as well,
 					but very few were displaying availability information and almost none of them were allowing bookings.</p>
 
-				<p>Our goal was to improve the parking experience by:
+				<span>Our goal was to improve the parking experience by:</span>
 
 				<ul class="article_list">
 					<li>showing availability information for both streets and garages</li>
 					<li>allowing bookings in secured lots (this became a separate product)</li>
 					<li>offering flexible mobile payments</li>
 				</ul>
-				</p>
+
 
 				<h2>STORYBOARDS</h2>
 
@@ -159,14 +159,9 @@
 
 				<h2>THE MOBILE APP</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>For the second version of the mobile app we targeted the Android platform since it was the most popular
+					mobile OS among the target users. Material design had just been published at that time and
+				using it was a learning process for the entire team, both design and engineering.</p>
 
 				<h3>HAND DRAWN MOCKUPS</h3>
 
