parking plus - wrote more content

--- a/parking_plus.html
+++ b/parking_plus.html
@@ -165,6 +165,11 @@
 
 				<h3>HAND DRAWN MOCKUPS</h3>
 
+				<p>Most of the flows and screens were sketched and discussed prior to being sent to the graphic designer.
+					Again, we focused on the primary user flows like bookings and payments, revised some flows that were
+					poorly designed in the first prototype, like parking availability and suggestions and covered missing
+					screens, like the introductory tutorial.</p>
+
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/A4%204x8%20grid1.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/parkingplus/A4%204x8%20grid1.png" alt="" /></a>
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/A4%204x8%20grid2.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/parkingplus/A4%204x8%20grid2.png" alt="" /></a>
@@ -178,7 +183,18 @@
 					<a class="fancybox" rel="group" title="sadfasdf" href="img/parkingplus/3.payments.png"><img class="gallery3 right_image with_border" id="function_candidates_1" src="img/parkingplus/3.payments.png" alt="" /></a>
 				</div>
 
+				<p>These are just part of the tens of screens that were refined. Some other screens can be seen in the
+					animations and marketing sections.</p>
+
 				<h3>ANIMATIONS</h3>
+
+				<p>Transitions between screens was something I have always wanted to try and this was my chance to do it.
+					Being new to this type of work, I had to get up to speed with the foundations of animation and with
+					the tools that would allow me to put together a quick mockup.</p>
+
+				<p>After doing a little research on the tools, I decided to try Pixate, which was not difficult to learn, but
+					being in the first release at that time, provided me with a lot of headaches. After two months, I was
+					able to cover the major screen transitions and I was happy to be done with it.</p>
 
 				<div class="gallery">
 					<div class="gallery2 left_image with_border">
@@ -223,6 +239,11 @@
 						</script>
 					</div>
 				</div>
+
+				<p>I learned tons of stuff on animations during this time, but the most important lesson was to think about
+					the communication between the app and the server, because those waiting times cannot be predicted and
+					the transitions should incorporate them from the design phase. Luckily, I was able to adapt my original
+					proposals just by adding progress bars and spinners, and tweaking the timing a little bit.</p>
 
 				<h2>THE ADMIN WEBSITE</h2>
 
