parking plus - wrote more content

--- a/parking_plus.html
+++ b/parking_plus.html
@@ -247,32 +247,29 @@
 
 				<h2>THE ADMIN WEBSITE</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>The backend services were not a priority during the MVP phase of the project, so the graphic web interfaces
+					were mostly designed by the engineers. One exception was the dashboard, because it was being shown in
+					demos and sales pitches, so it needed to look good. I took this opportunity to evolve the existing
+					interface with tables of numbers into a more visual and interactive version.</p>
+
+				<p>I started by analyzing the data that was displayed to understand the entities and the relationships between
+					them in order to find suitable visualizations.</p>
 
 				<div class="gallery">
 				<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/admin_dashboard_sketch_1.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/parkingplus/admin_dashboard_sketch_1.png" alt="" /></a>
 				<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/admin_dashboard_sketch_2.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/parkingplus/admin_dashboard_sketch_2.png" alt="" /></a>
 				</div>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>After sketching multiple ideas, I picked the ones that made the most sense and moved to Photoshop for
+					the high fidelity details. Even though the chord diagram was very attractive, we decided to dispatch
+					it because it was not scalable enough.</p>
 
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/admin_dashboard.png"><img class="gallery1" id="function_candidates_1" src="img/parkingplus/admin_dashboard.png" alt="" /></a>
 				</div>
+
+				<p>My second proposal was the one that got implemented and it was similar in terms of layout with the image above,
+					it just contained more donuts, stacked bars and an interactive heatmap for parking occupancy data.</p>
 
 				<h2>MARKETING MATERIALS</h2>
 
