parking plus - wrote more content

--- a/parking_plus.html
+++ b/parking_plus.html
@@ -273,14 +273,14 @@
 
 				<h2>MARKETING MATERIALS</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>Having won exhibition stands to some major european IT shows, the Web Summit in Dublin among them, forced
+					us to start working on the marketing materials, even though we were not ready to sell or had a marketing team.</p>
+
+				<p>Writing copy and designing for print was something new as well. I wasn't thrilled to do it because I have
+					never seen myself as a creative person, but I was happy to challenge myself and step outside my comfort zone.
+					Turns out these too can be approached with an engineering mindset, so I started with the structure of the
+					message we wanted to convey and sketched some visual ways of doing that, through a brochure and a catalog.
+					</p>
 
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/marketing_sketch_1.png"><img class="gallery3 left_image with_border" id="function_candidates_1" src="img/parkingplus/marketing_sketch_1.png" alt="" /></a>
@@ -288,21 +288,44 @@
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/marketing_sketch_3.png"><img class="gallery3 right_image with_border" id="function_candidates_1" src="img/parkingplus/marketing_sketch_3.png" alt="" /></a>
 				</div>
 
+				<p>This is the version that got printed and it was the result of our team work. I contributed with writing the copy,
+					choosing the pictures, providing feedback on multiple iterations, test print and bind the pages and most
+					importantly, user testing with random people to see how well the message was understood and how effective it was.</p>
+
+				<h3>THE CATALOG</h3>
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/catalog%201.png"><img class="gallery3 left_image with_border" id="function_candidates_1" src="img/parkingplus/catalog%201.png" alt="" /></a>
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/catalog%202.png"><img class="gallery3 center_image with_border" id="function_candidates_1" src="img/parkingplus/catalog%202.png" alt="" /></a>
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/catalog%203.png"><img class="gallery3 right_image with_border" id="function_candidates_1" src="img/parkingplus/catalog%203.png" alt="" /></a>
 				</div>
 
+				<h3>THE BROCHURE</h3>
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/flyer.png"><img class="gallery1 with_border" id="function_candidates_1" src="img/parkingplus/flyer.png" alt="" /></a>
 				</div>
+
+				<h3>THE EXPLAINER VIDEO</h3>
+
+				<p>This project can easily be a separate case study, but I'll try to summarize it. We needed a short video
+					to tell the story of the product. The video was supposed to be used in sales pitches and on the website.</p>
+
+				<p>I proposed the script, got the green light from the management team and started working on it. We contracted
+					a graphic artist to draw the characters and the application screens, went over a few iterations to make sure we have
+					all the postures and the right facial expressions and in a couple of weeks I had all that was needed to
+					assemble the video.</p>
 
 				<div class="gallery">
 					<video preload="none" controls class="gallery1" poster="img/parkingplus/video/video-poster.png">
 						<source src="img/parkingplus/video/explainer%20video.mp4" type="video/mp4">
 					</video>
 				</div>
+
+				<p>The most challenging part was the editing tool, but also keeping the video short. After multiple iterations
+					and almost a month, I had something worth showing.</p>
+
+				<h2>FINAL THOUGHTS</h2>
+
+				<p></p>
 
                 <div id="disqus_thread"></div>
                 <script>
