parking plus - wrote more content

--- a/parking_plus.html
+++ b/parking_plus.html
@@ -325,7 +325,14 @@
 
 				<h2>FINAL THOUGHTS</h2>
 
-				<p></p>
+				<p>Working on this project exceeded my expectations in many ways. I proved myself I was capable of doing a
+					good job, and that was something I needed after preparing a switch from software development to UX design
+					for a few years. Giving away most of my evenings and weekends for a year, for a symbolic financial incentive,
+					was a personal confirmation I enjoyed this type of work and that it was a career step in the right direction.</p>
+
+				<p>The variety of design work and team interactions also helped me grow a lot. I worked with multiple visual
+					designers and graphic artists, engineers, managers, both in person and remote, and I delivered from drawings
+					and sketches to wireframes, high fidelity screens, animations and copy.</p>
 
                 <div id="disqus_thread"></div>
                 <script>
