sab - started to add content

--- a/parking_plus.html
+++ b/parking_plus.html
@@ -134,7 +134,7 @@
 
 				<ul class="article_list">
 					<li>showing availability information for both streets and garages</li>
-					<li>allowing bookings in secured lots (this became a separate product)</li>
+					<li>allowing bookings in secured lots (this became a <a href="smart_access_box.html">separate product</a>)</li>
 					<li>offering flexible mobile payments</li>
 				</ul>
 
