--- a/smart_access_box.html
+++ b/smart_access_box.html
@@ -99,16 +99,23 @@
 			<div class="content">
 				<h1>SMART ACCESS BOX</h1>
 
+				<p>The need for smart and secured access was discovered while working on <a href="parking_plus.html">another product</a>.
+				It made more sense to build it as a separate product, since a flexible access control solution could be used
+					not only for parking lots, but also for offices, sports venues, homes, or any other area that has an electric locking mechanism.</p>
+
 				<h2>DESIGN AND IDENTITY CONCEPT</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>Management wanted this to look and feel like a premium product, so I came up with a brand identity
+					proposal that included advice for all the customer facing elements of the service.</p>
+
+				<div style="margin-bottom: 19px;">
+					<img src="img/pdf%20icon.png" style="vertical-align:middle;"/>
+					<a target="_blank" href="img/sab/identity%20concept.pdf" style="vertical-align:middle;"> Brand Identity Concept</a>
+				</div>
+
+				<p>I also spent some time drawing the most important use cases as storyboards. This helped the design team stay
+					aware of the usage context, but it also helped management in demos and sales pitches since it made it
+					easy to understand how the service could be used.</p>
 
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/storyboard1.png"><img class="gallery1" id="function_candidates_1" src="img/sab/storyboard1.png" alt="" /></a>
@@ -116,15 +123,6 @@
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/storyboard2.png"><img class="gallery1" id="function_candidates_1" src="img/sab/storyboard2.png" alt="" /></a>
 				</div>
 
-				<div style="margin-bottom: 19px;">
-					<img src="img/pdf%20icon.png" style="vertical-align:middle;"/>
-					<a target="_blank" href="img/sab/identity%20concept.pdf" style="vertical-align:middle;"> Brand Identity Concept</a>
-				</div>
-
-
-                <!--<div class="gallery">-->
-				    <!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
-                <!--</div>-->
 
 				<h2>THE LANDING PAGE</h2>
 
