sab -  added more content

--- a/smart_access_box.html
+++ b/smart_access_box.html
@@ -99,9 +99,13 @@
 			<div class="content">
 				<h1>SMART ACCESS BOX</h1>
 
-				<p>The need for smart and secured access was discovered while working on <a href="parking_plus.html">another product</a>.
+				<p>The need for smart and secured access was discovered while working on <a href="parking_plus.html" target="_blank">another product</a>.
 				It made more sense to build it as a separate product, since a flexible access control solution could be used
 					not only for parking lots, but also for offices, sports venues, homes, or any other area that has an electric locking mechanism.</p>
+
+				<p>Part of the solution was a physical box that was attached to any electric lock, the other part was a
+					mobile app that communicates with the box via low energy bluetooth. The access was granted based on
+					flexible and shareable virtual keys.</p>
 
 				<h2>DESIGN AND IDENTITY CONCEPT</h2>
 
@@ -126,19 +130,28 @@
 
 				<h2>THE LANDING PAGE</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>We started building the landing page even before we started talking about the mobile app. It's goal was to
+					present the product, get people excited, gather some comments and feedback and ultimately get some pre orders.</p>
 
+				<p>Since the page was going to be shared in email marketing campaigns, we expected a lot of users to see it
+					on their mobile devices, so the responsiveness way key to the success of the project.
+					The proposal was based on the product identity concept, using full screen high quality images with the
+					solution, simple and clean copy and social proof.</p>
 
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/A4%204x8%20grid%20landing%20page.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/sab/A4%204x8%20grid%20landing%20page.png" alt="" /></a>
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/A4%204x8%20grid%20gallery.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/sab/A4%204x8%20grid%20gallery.png" alt="" /></a>
+				</div>
+
+				<p>I worked closely with the visual designer on multiple iterations of the design. The images bellow only
+					show the first version, the one that was tested with users and the one that was released. In between,
+					there were probably close to ten versions and a lot of skype feedback sessions, since the visual
+					designer was remote.</p>
+
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/landing%20page%201.jpg"><img style="vertical-align: top;" class="gallery3 left_image with_border" id="function_candidates_1" src="img/sab/landing%20page%201.jpg" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/landing%20page%202.jpg"><img style="vertical-align: top;" class="gallery3 center_image with_border" id="function_candidates_1" src="img/sab/landing%20page%202.jpg" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/landing%20page%203.jpg"><img style="vertical-align: top;" class="gallery3 right_image with_border" id="function_candidates_1" src="img/sab/landing%20page%203.jpg" alt="" /></a>
 				</div>
 
 				<div style="margin-bottom: 19px;">
@@ -151,11 +164,9 @@
 					<a target="_blank" href="img/sab/websiteanimations.pdf" style="vertical-align:middle;"> Landing Page Animations</a>
 				</div>
 
-				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/landing%20page%201.jpg"><img style="vertical-align: top;" class="gallery3 left_image with_border" id="function_candidates_1" src="img/sab/landing%20page%201.jpg" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/landing%20page%202.jpg"><img style="vertical-align: top;" class="gallery3 center_image with_border" id="function_candidates_1" src="img/sab/landing%20page%202.jpg" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/landing%20page%203.jpg"><img style="vertical-align: top;" class="gallery3 right_image with_border" id="function_candidates_1" src="img/sab/landing%20page%203.jpg" alt="" /></a>
-				</div>
+				<p>We tested with five users and got some very interesting findings. Some of the users were developers on
+					other projects of the company and they were a little biased because they were aware of parking startup
+					I was part of, others were friends of mine who were kind enough to volunteer their time.</p>
 
 				<h2>THE MOBILE APP</h2>
 
