sab -  added more content

--- a/smart_access_box.html
+++ b/smart_access_box.html
@@ -170,14 +170,21 @@
 
 				<h2>THE MOBILE APP</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>There were two types of users for the mobile app, the ones that manage the access to a secured location
+				and the ones that request or make use of the granted permissions.</p>
+
+				The consumers of the service had to be able to:
+				<ul class="article_list">
+					<li>see the in range secured locations</li>
+					<li>make use of their permissions to open/close in range doors</li>
+					<li>request access for in and out of range locations</li>
+				</ul>
+
+				The administrators of the access points had to be able to:
+				<ul class="article_list">
+					<li>respond to an access request</li>
+					<li>define permissions to an user identified by his email address</li>
+				</ul>
 
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original " href="img/sab/mockup1.png"><img class="gallery4 left_image " id="function_candidates_1" src="img/sab/mockup1.png" alt="" /></a>
@@ -199,14 +206,9 @@
 					<a class="fancybox" rel="group" title="Original " href="img/sab/mockup11.png"><img class="gallery4 right_image " id="function_candidates_1" src="img/sab/mockup11.png" alt="" /></a>
 				</div>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-				</p>
+				<p>At the time we needed the visual design ready, we were in the process of looking for a new visual designer,
+					so I had to get my hands dirty. We started with the android version, so I used material design guidelines for
+					navigation, layout, typography and icons.</p>
 
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="sadfasdf" href="img/sab/0.splashscreen.png"><img class="gallery3 left_image with_border" id="function_candidates_1" src="img/sab/0.splashscreen.png" alt="" /></a>
@@ -217,6 +219,9 @@
 					<a class="fancybox" rel="group" title="sadfasdf" href="img/sab/5.my%20smart%20keys.png"><img class="gallery3 center_image with_border" id="function_candidates_1" src="img/sab/5.my%20smart%20keys.png" alt="" /></a>
 					<a class="fancybox" rel="group" title="sadfasdf" href="img/sab/6.my%20access%20points.png"><img class="gallery3 right_image with_border" id="function_candidates_1" src="img/sab/6.my%20access%20points.png" alt="" /></a>
 				</div>
+
+				<p>The entire process, from the first sketches, to delivering the final specs was quite fast, mostly because
+					the functionality was straight forward and I already had some experience with material design from a previous project.</p>
 
 				<h2>MARKETING MATERIALS</h2>
 
