sab -  added more content

--- a/smart_access_box.html
+++ b/smart_access_box.html
@@ -225,6 +225,38 @@
 
 				<h2>MARKETING MATERIALS</h2>
 
+				<p>We needed a brochure and a catalog in order to promote the project at various IT trades across Europe,
+					especially the Web Summit in Dublin where we were part of the Alpha program and had a presentation booth.</p>
+
+				<p>I met with the newly hired graphic designer, the technical lead and the project manager to brainstorm
+					ideas for the design of the print materials. After that meeting I came up with proposals for both items,
+					in terms of content and layout.</p>
+
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/A4%204x8%20part%201.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/sab/A4%204x8%20part%201.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/A4%204x8%20part%202.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/sab/A4%204x8%20part%202.png" alt="" /></a>
+				</div>
+
+				<p>After discussing the proposals, I worked closely with the graphic designer on the design that was going
+					to be printed. We already had some materials in the form of high quality
+					images and part of the copy. Interestingly, we decided to use the storyboards to showcase the usage
+					scenarios, but my version was not good enough to be published, so they were redrawn by a more talented person.</p>
+
+				<h3>THE CATALOG</h3>
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/catalog%201.png"><img class="gallery3 left_image with_border" id="function_candidates_1" src="img/sab/catalog%201.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/catalog%202.png"><img class="gallery3 center_image with_border" id="function_candidates_1" src="img/sab/catalog%202.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/catalog%203.png"><img class="gallery3 right_image with_border" id="function_candidates_1" src="img/sab/catalog%203.png" alt="" /></a>
+				</div>
+
+				<h3>THE BROCHURE</h3>
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/flyer.png"><img class="gallery1 with_border" id="function_candidates_1" src="img/sab/flyer.png" alt="" /></a>
+				</div>
+
+
+				<h2>FINAL THOUGHTS</h2>
+
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
 					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
 					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
@@ -234,20 +266,6 @@
 					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
 					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
 
-				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/A4%204x8%20part%201.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/sab/A4%204x8%20part%201.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/A4%204x8%20part%202.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/sab/A4%204x8%20part%202.png" alt="" /></a>
-				</div>
-
-				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/catalog%201.png"><img class="gallery3 left_image with_border" id="function_candidates_1" src="img/sab/catalog%201.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/catalog%202.png"><img class="gallery3 center_image with_border" id="function_candidates_1" src="img/sab/catalog%202.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/catalog%203.png"><img class="gallery3 right_image with_border" id="function_candidates_1" src="img/sab/catalog%203.png" alt="" /></a>
-				</div>
-
-				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/flyer.png"><img class="gallery1 with_border" id="function_candidates_1" src="img/sab/flyer.png" alt="" /></a>
-				</div>
 
 				<div id="disqus_thread"></div>
 				<script>
